force-app/main/default/objects/book_new_car__c/book_new_car__c.object-meta.xml
<CustomObject>
    <label>book new car</label>
    <nameField>
        <label>book new car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>book new cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>