force-app/main/default/objects/book_new_car__c/fields/book_know__c.field-meta.xml
<CustomField>
    <fullName>book_know__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>book know</label>
    <referenceTo>Bookings__c</referenceTo>
    <relationshipLabel>book new cars</relationshipLabel>
    <relationshipName>book_new_cars</relationshipName>
    <type>Lookup</type>
</CustomField>