force-app/main/default/objects/book_new_car__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Bookings__c</referenceTo>
    <relationshipLabel>Name</relationshipLabel>
    <relationshipName>book_new_cars1</relationshipName>
    <type>Lookup</type>
</CustomField>