force-app/main/default/objects/book_new_car__c/fields/car_name__c.field-meta.xml
<CustomField>
    <fullName>car_name__c</fullName>
    <label>car name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mahindra Thar</fullName>
            </value>
            <value>
                <fullName>Maruti Swift</fullName>
            </value>
            <value>
                <fullName>Tata Nexon</fullName>
            </value>
            <value>
                <fullName>Tata Punch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>