force-app/main/default/objects/book_new_car__c/fields/car_price__c.field-meta.xml
<CustomField>
    <fullName>car_price__c</fullName>
    <label>car price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>